Add debug to run ng serve

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "debug": "ng serve",
     "postinstall": "ng build --prod"
   },
   "private": true,
