--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "express": "^4.17.1",
     "jwt-decode": "^2.2.0",
+    "ng-file-model": "0.0.5",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
