--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-file-upload": "^2.5.0",
     "express": "^4.17.1",
     "jwt-decode": "^2.2.0",
     "ng-file-model": "0.0.5",
